Closed Bug 1816088 Opened 3 years ago Closed 2 years ago

One can't use shmem with higher than normal priority messages?

Categories

(Core :: IPC, defect)

defect

Tracking

()

RESOLVED FIXED
112 Branch
Tracking Status
firefox112 --- fixed

People

(Reporter: smaug, Assigned: smaug)

References

Details

(Whiteboard: [orb:m2])

Attachments

(1 file)

https://phabricator.services.mozilla.com/D169381 tries to use very high priority message but that triggers crashes like https://treeherder.mozilla.org/logviewer?job_id=405191146&repo=try&lineNumber=5654
Does https://searchfox.org/mozilla-central/rev/d9dbf648b2f7557f6f06d27cce58546cc539cb2b/ipc/glue/Shmem.cpp#25-26 end up causing shmem related processing happen too late?
It is surprising to the ipdl user that shmem would arrive later than the relevant message.

Assignee: nobody → smaug
Attachment #9317224 - Attachment description: WIP: Bug 1816088 - use highest priority message for SHMEM_CREATED_MESSAGE_TYPE, r=nika → Bug 1816088 - use highest priority message for SHMEM_CREATED_MESSAGE_TYPE, r=nika
Status: NEW → ASSIGNED
Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c05126fe25da use highest priority message for SHMEM_CREATED_MESSAGE_TYPE, r=nika
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch
Whiteboard: [orb:m2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: