Bug 1816088 - use highest priority message for SHMEM_CREATED_MESSAGE_TYPE, r=nika

Differential Revision: https://phabricator.services.mozilla.com/D169566