ipc/glue/Shmem.cpp
@@ -23,7 +23,7 @@ class ShmemCreated : public IPC::Message {
   ShmemCreated(int32_t routingId, id_t aIPDLId, size_t aSize)
       : IPC::Message(
             routingId, SHMEM_CREATED_MESSAGE_TYPE, 0,
-            HeaderFlags(NESTED_INSIDE_CPOW, NORMAL_PRIORITY, COMPRESSION_NONE,
+            HeaderFlags(NESTED_INSIDE_CPOW, CONTROL_PRIORITY, COMPRESSION_NONE,
                         LAZY_SEND, NOT_CONSTRUCTOR, ASYNC, NOT_REPLY)) {
     MOZ_RELEASE_ASSERT(aSize < std::numeric_limits<uint32_t>::max(),
                        "Tried to create Shmem with size larger than 4GB");
